fix(mobile): UIComponents - OnOff List  Toggle layout issue [OAPTAU-431]
- deleted wrong selectors  from style.css

--- a/tau/src/css/profile/mobile/changeable/common/listview.less
+++ b/tau/src/css/profile/mobile/changeable/common/listview.less
@@ -381,7 +381,7 @@
 			right: 32 * @unit_base;
 			transform: translate(0, -50%);
 
-			&:first-child {
+			&:first-child:not(:only-child) {
 				right: 120 * @unit_base;
 			}
 		}
